chrome/browser/chromeos/extensions/autotest_private/autotest_private_api.h
@@ -231,6 +231,14 @@ class AutotestPrivateGetHistogramFunction : public UIThreadExtensionFunction {
  private:
   ~AutotestPrivateGetHistogramFunction() override;
   ResponseAction Run() override;
+
+  // Sends an asynchronous response containing data for the histogram named
+  // |name|. Passed to content::FetchHistogramsAsynchronously() to be run after
+  // new data from other processes has been collected.
+  void RespondOnHistogramsFetched(const std::string& name);
+
+  // Creates a response with current data for the histogram named |name|.
+  ResponseValue GetHistogram(const std::string& name);
 };
 
 class AutotestPrivateIsAppShownFunction : public UIThreadExtensionFunction {
